# cloud-image-download

./: .justfile  Cargo.toml  README.md  cid.sbom.spdx.json  justfile  rustfmt.toml
docs/: architecture.md  diagram.excalidraw
src/: checksums.rs  cli.rs  cloud_image.rs  download.rs  image_history.rs  image_list.rs  lib.rs  proxy.rs  settings.rs  website.rs
test_data/: cloud-image-download.toml  no_db_path.toml
