[package]
name = "cloud-image-download"
version = "0.3.2"
edition = "2024"
authors = ["Olivier Delhomme <olivier.delhomme@free.fr>"]
description = "Downloads cloud images to a directory"
repository = "https://github.com/dupgit/cloud-image-download"
license = "MIT OR Apache-2.0"
keywords = ["cloud", "image", "download", "qcow2", "ubuntu", "fedora"]
categories = ["command-line-utilities"]

[dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
chrono = "0.4.41"
clap = { version = "4.5.26", features = ["color", "cargo", "derive"] }
clap-verbosity-flag = "3.0.2"
colored = "3.0.0"
config = "0.15.5"
const_format = "0.2.34"
directories = "6.0.0"
env_logger = "0.11.6"
futures = "0.3.31"
httpdirectory = "0.15.0"
log = "0.4.22"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["stream"] }
rusqlite = { version = "0.36.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"
shellexpand = { version = "3.1.0", features = ["full"] }
tokio = { version = "1.42.0", features = ["full"] }
trauma = "2.3.0"

# Uncomment these lines to use vendored sources to recompile
#
#[source.crates-io]
#replace-with = "vendored-sources"
#
#[source.vendored-sources]
#directory = "vendor"


[profile.release]
codegen-units = 1
lto = true        # Enable Link Time Optimization
panic = 'abort'
strip = true
